[package]
name = "smart-hash-derive"
version = "0.1.1"
authors = ["snsvrno <snsvrno@tuta.io>"]
edition = "2018"

license = "MIT"
description = "partial queries in HashSets, the traits."
repository = "https://github.com/snsvrno/smart-hash-rs"
readme = "../README.md"
keywords = ["hashset","query","search","database"]
categories = ["data-structures"]

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4"

[dev-dependencies]
smart-hash = { version = "0.1", path = "../smart-hash" }